# intention-test-extension

./: .gitignore  .pre-commit-config.yaml  .vscode-test.mjs  README.md  docker-compose.yml
.github/workflows/: ci.yml  python-ci.yml  release.yml
backend/: pyproject.toml
backend/tests/: conftest.py  test_agents.py  test_core.py  test_dataset.py  test_integration.py  test_messages.py  test_server.py
src/test/: textUtils.test.ts
web/: index.html  index.js
